--- a/_config.yml
+++ b/_config.yml
@@ -378,13 +378,13 @@ han: false
 # Baidu Analytics ID
 baidu_analytics: 70b7e141dfc0ea2b204682f94ab2e01a
 
-# Duoshuo ShortName
-#duoshuo_shortname:
+# 来比力评论系统
+LiveRe_control: true
 
-# Disqus
+# Disqus评论系统，可以用但是得FQ
 disqus:
   enable: true
-  shortname: simpleyyt
+  shortname: binzhouchn
   count: true
   # hide comments (visitors need to click to load the comments)
   # count need to be false when hide is true
