--- a/_config.yml
+++ b/_config.yml
@@ -491,6 +491,11 @@ rating:
 
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
+lean_cloud :
+  app_id   :  E6YH2R550itfx9doX7l4QgES-gzGzoHsz
+  app_key  :  lgXi29VxUVNxXh4gBSYWYVMB
+
+
 leancloud_visitors:
   enable: true
   app_id: E6YH2R550itfx9doX7l4QgES-gzGzoHsz
