--- a/_config.yml
+++ b/_config.yml
@@ -213,8 +213,11 @@ font:
 # Social Links
 # Key is the link label showing to end users.
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
-#social:
-  #LinkLabel: Link
+social:
+  GitHub: https://github.com/binzhouchn
+  知乎: http://www.zhihu.com/people/binzhouchn
+  WeiBo: https://weibo.com
+  Twitter: http://www.twitter.com
 
 
 # Social Links Icons
