--- a/_config.yml
+++ b/_config.yml
@@ -236,7 +236,7 @@ social_icons:
 
 # Sidebar Avatar
 # in directory: /assets/images/avatar.gif
-#avatar:
+avatar: /assets/images/author.jpg
 
 
 # Table Of Contents in the Sidebar
