--- a/_config.yml
+++ b/_config.yml
@@ -409,6 +409,8 @@ changyan:
 # Support for LiveRe comments system.
 # You can get your uid from https://livere.com/insight/myCode (General web site)
 #livere_uid: your uid
+# 来比力评论系统
+LiveRe_control: true
 
 # Support for gitalk comments system.
 gitalk:
