--- a/_config.yml
+++ b/_config.yml
@@ -409,7 +409,8 @@ changyan:
 
 # Support for LiveRe comments system.
 # You can get your uid from https://livere.com/insight/myCode (General web site)
-livere_uid: MTAyMC8zNzg4Ni8xNDQxNg==
+#livere_uid: MTAyMC8zNzg4Ni8xNDQxNg==
+livere_uid: MTAyMC8zOTM0MS8xNTg2OA==
 
 # Support for gitalk comments system.
 gitalk:
